testsuite/tests/typecheck/should_fail/T24064.stderr
T24064.hs:42:3: error: [GHC-25897]
    • Could not deduce ‘m ~ X e0’
      from the context: (C2 m, F2 m ~ Y)
        bound by the type signature for:
                   test :: forall (m :: * -> *). (C2 m, F2 m ~ Y) => m ()
        at T24064.hs:40:1-32
      Expected: m ()
        Actual: X e0 ()
      ‘m’ is a rigid type variable bound by
        the type signature for:
          test :: forall (m :: * -> *). (C2 m, F2 m ~ Y) => m ()
        at T24064.hs:40:1-32
    • In the expression: fun1
      In the expression:
        do fun1
           fun2
           g fun3
           fun4 undefined
      In an equation for ‘test’:
          test
            = do fun1
                 fun2
                 g fun3
                 ....
    • Relevant bindings include test :: m () (bound at T24064.hs:41:1)

